--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "4slovo/money",
+  "name": "4slovo/interface-generator",
   "description": "interface code generator",
   "license": "MIT",
   "minimum-stability": "stable",
